# seed

./: .gitignore  Cargo.toml
src/: config.rs  database.rs  main.rs  str_util.rs
src/config/: field_schema.rs  mod.rs
src/generation/: error.rs  execution.rs  generator.rs  mod.rs
src/generation/fields/: email.rs  field_type.rs  first_name.rs  full_name.rs  integer.rs  last_name.rs  mod.rs  text.rs  timestamp.rs  username.rs  uuid.rs
src/sql/: bool_value.rs  builder.rs  mod.rs  number_values.rs  statement.rs  string_values.rs  value.rs
src/test_util/: mod.rs
