[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
fake = { version = "2.4", features = ['chrono', 'uuid'] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.5.8" }

[dev-dependencies]
serde_test = "1"